@@ -1,4 +1,5 @@
 3.0.19
+ * Improve `nodetool status -r` speed (CASSANDRA-14847)
  * Anti-compaction temporarily corrupts sstable state for readers (CASSANDRA-15004)
  Merged from 2.2:
  * Multi-version in-JVM dtests (CASSANDRA-14937)
